# bookshop

./: .gitignore  .pre-commit-config.yaml  README.md
application/: .mypy.ini  .pylintrc  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
application/bookshop_app/: __init__.py  app.py  authenticator.py  config.py  dependencies.py
application/bookshop_app/controllers/: booking.py  product.py  store.py  store_item.py  user.py
application/bookshop_app/data_access_objects/: booking.py  booking_status.py  product.py  role.py  store.py  store_item.py  user.py  user_dao.py
application/bookshop_app/database/: database.py  listeners.py
application/bookshop_app/forms/: __init__.py  _base.py  authentication.py  booking.py  login.py  product.py  store_item.py
application/bookshop_app/models/: booking.py  booking_status.py  file.py  product.py  role.py  store.py  store_item.py  user.py  user_model.py  user_schema.py
application/bookshop_app/open_api/: swagger.yml
application/bookshop_app/routes/: booking.py  product.py  store_item.py  user.py
application/bookshop_app/schemas/: booking.py  booking_status.py  product.py  role.py  store.py  store_item.py  user.py
application/bookshop_app/services/: authentication.py  booking.py  product.py  store.py  store_item.py  user.py
application/bookshop_app/static/js/: authentication.js  bookings.js  product.js  products.js  store_items.js  user.js  users.js
application/bookshop_app/templates/: _base.html
application/bookshop_app/templates/_base/: base.html  forms.html  macros.html  modal.html
application/bookshop_app/templates/authentication/: _base.html  _macros.html  login.html  registration.html
application/bookshop_app/templates/bookings/: _booking_card_macros.html  _macros.html  booking.html  bookings.html
application/bookshop_app/templates/main/: about.html  home.html
application/bookshop_app/templates/products/: _macros.html  product.html  products.html
application/bookshop_app/templates/products/_elements/: big_product_card.html  management_panel.html  paginator.html  small_product_card.html
application/bookshop_app/templates/store_items/: _macros.html  store_item.html  store_items.html
application/bookshop_app/templates/users/: _macros.html  user.html  users.html
application/bookshop_app/templates/users/_elements/: table.html  user_profile_card.html
application/bookshop_app/utils/: logger.py
application/bookshop_app/views/: authentication.py  blueprints.py  bookings.py  main.py  media.py  products.py  store_items.py  users.py
cicd/: .gitlab-ci.yml  (+1 more)
tests/bookshop-api-tests/: pyproject.toml
tests/bookshop-api-tests/bookshop_api_tests/: conftest.py  pytest.ini
tests/bookshop-api-tests/bookshop_api_tests/bookings/: conftest.py  test_data.yaml  test_smoke_create_booking.py  test_smoke_delete_booking.py  test_smoke_get_all_bookings.py  test_smoke_get_booking.py  test_smoke_update_booking.py
tests/bookshop-api-tests/bookshop_api_tests/products/: conftest.py  test_data.yaml  test_smoke_create_product.py  test_smoke_delete_product.py  test_smoke_get_all_products.py  test_smoke_get_product.py  test_smoke_update_product.py
tests/bookshop-api-tests/bookshop_api_tests/store_items/: conftest.py  test_data.yaml  test_smoke_create_store_item.py  test_smoke_delete_store_item.py  test_smoke_get_all_store_items.py  test_smoke_get_store_item.py  test_smoke_update_store_item.py
tests/bookshop-api-tests/bookshop_api_tests/users/: conftest.py  test_data.yaml  test_ddt_create_user_by_invalid_data.py  test_ddt_create_user_by_valid_data.py  test_ddt_get_user.py  test_ddt_update_user_by_invalid_data.py  test_ddt_update_user_by_valid_data.py  test_smoke_create_user.py  test_smoke_delete_user.py  test_smoke_get_all_users.py  test_smoke_get_user.py  test_smoke_update_user.py
tests/bookshop-test-framework/: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
tests/bookshop-test-framework/bookshop_test_framework/asserts/api/: response.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/asserts/unit/: response.py
tests/bookshop-test-framework/bookshop_test_framework/config/: config.py  config.yaml
tests/bookshop-test-framework/bookshop_test_framework/fixtures/api/: api.py  booking.py  product.py  store_item.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/application/: application.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/common/: task_groups.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/config/: config.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/data/: __init__.py  application_models.py  faker.py  generated_models.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/mocks/: dao.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/pages/: driver.py  product.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/fixtures/patches/: dao.py
tests/bookshop-test-framework/bookshop_test_framework/hooks/: pytest_configure.py
tests/bookshop-test-framework/bookshop_test_framework/mocks/dao/: base.py  booking.py  booking_status.py  product.py  role.py  store_item.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/models/: base.py  booking.py  product.py  store_item.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/tools/api/: __init__.py  _base.py  booking.py  product.py  store_item.py  user.py
tests/bookshop-test-framework/bookshop_test_framework/tools/data_generator/: test_data_generator.py
tests/bookshop-test-framework/bookshop_test_framework/tools/pages/: __init__.py
tests/bookshop-ui-tests/: README.md  pyproject.toml
tests/bookshop-ui-tests/bookshop_ui_tests/: conftest.py  pytest.ini
tests/bookshop-ui-tests/bookshop_ui_tests/e2e/: test_data.yaml  test_register_user.py  test_view_products.py
tests/bookshop-unit-tests/: pyproject.toml
tests/bookshop-unit-tests/bookshop_unit_tests/: conftest.py  pytest.ini
tests/bookshop-unit-tests/bookshop_unit_tests/endpoints/: conftest.py
(+55 files in other folders)
