[project]
name = "bookshop"
version = "0.6.1"
description = "Web API application for small bookshop"
readme = "README.md"
requires-python = ">=3.11"
maintainers = [
    {name = "Andrei Zaneuski", email = "zanevskiyandrey@gmail.com"}
]

dependencies = [
    # First level dependencies
    "connexion",
    "Flask",
    "Flask-HTTPAuth",
    "Flask-Login",
    "flask-marshmallow",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "Flask-WTF",
    "PyJWT",
    "marshmallow",
    "marshmallow-sqlalchemy",
    "Pillow",
    "requests",
    "SQLAlchemy~=1.4",  # Stick to version 1.* due to legacy column object usage
    "swagger-ui-bundle",
    "Werkzeug",
    "WTForms",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pylint",
    "pylint-flask",
    "pylint-flask-sqlalchemy",
]

[tool.setuptools.package-data]
"bookshop_app.open_api" = ["swagger.yml"]
"bookshop_app.static.css" = ["*.css"]
"bookshop_app.static.images" = ["*.jpg", "*.ico"]
"bookshop_app.static.js" = ["*.js"]
"bookshop_app.templates" = ["**/*.html"]

[tool.setuptools.packages.find]
include = ["bookshop_app*"]

[project.scripts]
run_bookshop_app = "bookshop_app.app:run_application"
