[project]
name = "bookshop-api-tests"
version = "1.0.0"
description = "Test Cases for testing Bookshop API"
readme = "README.md"
requires-python = ">=3.11"
maintainers = [
    { name = "Andrei Zaneuski", email = "***REMOVED***" }
]

dependencies = [
    "bookshop_test_framework~=1.0.0"
]

[tool.setuptools.packages.find]
include = ["bookshop_api_tests*"]


[project.optional-dependencies]
dev = ["pylint", "mypy"]

[project.urls]
repository = "***REMOVED***"
