[project]
name = "bookshop-test-framework"
version = "0.5.1"
description = "Test framework for different type of test cases for bookshop application"
readme = "README.md"
requires-python = ">=3.11"
maintainers = [
    { name = "Andrei Zaneuski", email = "***REMOVED***" }
]

dependencies = [
    # "bookshop"  # Project application package MUST be installed for unit-tests-run
    "aiohttp",
    "async_lru",
    "deepdiff",
    "faker",
    "prettytable",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "PyYAML",
    "requests",
    "selenium",
]

[project.optional-dependencies]
dev = ["black", "mypy", "pylint"]

[tool.setuptools.packages.find]
include = ["bookshop_test_framework*"]

[tool.setuptools.package-data]
"bookshop_test_framework.config" = ["config.yaml"]

[project.urls]
repository = "***REMOVED***"

[tool.black]
line-length = 120
target-version = ['py311']
