[project]
name = "bookshop-ui-tests"
version = "0.2.0"
description = "UI Tests for bookshop application"
readme = "README.md"
requires-python = ">=3.11"
maintainers = [
    {name = "Andrei Zaneuski", email = "***REMOVED***"}
]

[project.optional-dependencies]
dev = ["black", "mypy", "pylint"]

[project.urls]
repository = "***REMOVED***"

[tool.black]
line-length = 120
target-version = ['py311']
