[project]
name = "bookshop-unit-tests"
version = "1.0.0"
description = "Unit tests for bookshop application"
readme = "README.md"
requires-python = ">=3.11"
maintainers = [
    {name = "Andrei Zaneuski", email = "***REMOVED***"}
]

dependencies = [
    "bookshop",
]

[project.optional-dependencies]
dev = ["pylint", "mypy"]

[project.urls]
repository = "***REMOVED***"
